--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -39,6 +39,7 @@
     "user-menu-label": "User menu actions"
   },
   "no-more-posts": "No more posts",
+  "no-notifications": "No notifications",
   "no-results-found": "No results found",
   "notifications": {
     "live-notifications-started": "Live notifications started"
