--- a/public/locales/cn/common.json
+++ b/public/locales/cn/common.json
@@ -20,6 +20,7 @@
   "follower-count": "{{followerCount}} 追随者",
   "following-count": "{{followerCount}} 下列的",
   "help": "帮助",
+  "no-access": "您无权访问此页面。",
   "no-more-posts": "太好了！你看到了所有内容",
   "no-notifications": "没有通知",
   "no-results-found": "No results found",
@@ -28,6 +29,9 @@
   },
   "online-user-count": "当前有 {{count}} 人在线。",
   "pages": {
+    "admin": {
+      "title": ""
+    },
     "analytics": {
       "title": "Analytics"
     },
